--- a/src/main/webapp/resources/css/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap.css
@@ -4496,7 +4496,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     margin-right: 0;
   }
 }
-.navbar-default {
+.navbar navbar-default {
   background-color: #e95420;
   border-color: #d34615;
 }
