--- a/src/main/webapp/resources/css/bootstrap.css
+++ b/src/main/webapp/resources/css/bootstrap.css
@@ -1611,6 +1611,7 @@ pre code {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  background-color: #e95420;
 }
 .row {
   margin-left: -15px;
@@ -4499,7 +4500,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default {
   background-color: #e95420;
   border-color: #d34615;
-
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
@@ -4507,7 +4507,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
   color: #ffffff;
-  background-color: #FFFF00; /* yellow for testing */
+  background-color: none;
 }
 .navbar-default .navbar-text {
   color: #ffffff;
@@ -4518,7 +4518,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #ffffff;
-  background-color: #FFFF00; /* yellow for testing */
+  background-color: #ac3911;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
